--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
-  <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
-
+  <body class="page__body">
+    <header class="page-header page-header--index">
+      <a class="page-header__logo">
+        <img class="page-header__logo-image" src="#" width="185" height="96" alt="Логотип города Седона">
+      </a>
+      <nav class="page-header__main-nav main-nav main-nav--closed container">
+        <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
+        <ul class="main-nav__list">
+          <li class="main-nav__item main-nav__item--active">
+            <a class="main-nav__link">Главная</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="catalog.html">Фото и видео</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="form.html">Форма отзыва</a>
+          </li>
+          <li class="main-nav__item">
+            <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          </li>
+        </ul>
+        <div class="page-header__promo promo container">
+          <h1 class="promo__page-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <img class="promo__slogan-image" src="#" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
+        </div>
+      </nav>
+    </header>
+    
   </body>
 </html>
