Добавляет раздел Преимущества на главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -31,6 +31,58 @@
         </div>
       </nav>
     </header>
-    
+
+    <main class="page-main">
+
+      <section class="features">
+        <div class="features__wrapper container">
+          <h2 class="features__title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
+          <ol class="features__list">
+            <li class="features__item features__item-1 features__item--another-view">
+              <h3 class="features__subtitle">Настоящий городок</h3>
+              <span class="features__number">№1</span>
+              <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+              <img class="features__image" src="#" width="520" height="260" alt="Фото города Седона">
+              <ul class="features__list benefits">
+                <li class="benefits__item benefits__item--icon-1">
+                  <b class="benefits__label">Жилье</b>
+                  <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                </li>
+                <li class="benefits__item benefits__item--icon-2">
+                  <b class="benefits__label">Еда</b>
+                  <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                </li>
+                <li class="benefits__item benefits__item--icon-3">
+                  <b class="benefits__label">Сувениры</b>
+                  <p class="benefits__description">Не только китайского, но и местного производства!</p>
+                </li>
+              </ul>
+            </li>
+            <li class="features__item features__item-2 features__item--another-view">
+              <h3 class="features__subtitle">Там есть Мост Дьявола</h3>
+              <span class="features__number">№2</span>
+              <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <img class="features__image" src="#" width="520" height="260" alt="Фото Моста Дьявола">
+            </li>
+            <li class="features__item features__item-3">
+              <h3 class="features__subtitle">Небольшая площадь</h3>
+              <span class="features__number">№3</span>
+              <p class="features__description">Все интересные места находятся очень близко</p>
+            </li>
+            <li class="features__item features__item-4">
+              <h3 class="features__subtitle">Красивая дорога</h3>
+              <span class="features__number">№4</span>
+              <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="features__item features__item-5">
+              <h3 class="features__subtitle">Мало туристов</h3>
+              <span class="features__number">№5</span>
+              <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+          </ol>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
