Добавляет раздел выбора гостиницы на главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -83,6 +83,14 @@
         </div>
       </section>
 
+      <section class="service">
+        <div class="service__wrapper container">
+          <b class="service__intro">Заинтересовались?</b>
+          <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="service__find-hotel-button button" href="#">Найти гостиницу</a>
+        </div>
+      </section>
+
     </main>
   </body>
 </html>
