Добавляет раздел с картой на главную страницу

--- a/source/index.html
+++ b/source/index.html
@@ -91,6 +91,10 @@
         </div>
       </section>
 
+      <section class="map">
+        <img class="map__image" src="#" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
+      </section>
+
     </main>
   </body>
 </html>
