--- a/source/index.html
+++ b/source/index.html
@@ -96,5 +96,43 @@
       </section>
 
     </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper container">
+        <b class="page-footer__hashtag">#visitsedona</b>
+        <ul class="page-footer__list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--vk" href="#" aria-label="Vkontacte">
+              <svg class="social-list__link-icon social-list__link-icon--vk" width="24" height="14">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--tg" href="#" aria-label="Telegram">
+              <svg class="social-list__link-icon social-list__link-icon--tg" width="21" height="17.6">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--ytb" href="#" aria-label="Youtube">
+              <svg class="social-list__link-icon social-list__link-icon--ytb" width="20" height="14">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+            Разработано
+            <svg class="copyright__link-icon" width="27" height="34">
+              <!-- use -->
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
