Добавляет страницу каталога и шапку для нее

--- a/source/index.html
+++ b/source/index.html
@@ -25,7 +25,7 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo container">
+        <div class="page-header__promo promo promo--index container">
           <h1 class="promo__page-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <img class="promo__slogan-image" src="#" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
