--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,50 +37,103 @@
             <div class="photo-gallery__wrapper container">
                 <h1 class="photo-gallery__page-title">Фото и видео</h1>
                 <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-                <article class="photo-gallery__item">
-                    <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография дороги">
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Борис</p>
-                        </div>
-                        <span class="photo-gallery__like-counter">1350</span>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография растения">
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Местная растительность</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Сергей</p>
-                        </div>
-                        <span class="photo-gallery__like-counter">143</span>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография горной дороги">
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Дорога на север</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Петр</p>
-                        </div>
-                        <span class="photo-gallery__like-counter">96</span>
-                    </div>
-                </article>
-                <article class="photo-gallery__item">
-                    <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография Моста Дьявола">
-                    <div class="photo-gallery__item-info">
-                        <div class="photo-gallery__caption">
-                            <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
-                            <p class="photo-gallery__author-name">Автор фото: Антон</p>
-                        </div>
-                        <span class="photo-gallery__like-counter">254</span>
-                    </div>
-                </article>
+                <a class="photo-gallery__link" href="#" _blank>
+                  <article class="photo-gallery__item">
+                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография дороги">
+                      <div class="photo-gallery__item-info">
+                          <div class="photo-gallery__caption">
+                              <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
+                              <p class="photo-gallery__author-name">Автор фото: Борис</p>
+                          </div>
+                          <span class="photo-gallery__like-counter">1350</span>
+                      </div>
+                  </article>
+                </a>
+                <a class="photo-gallery__link" href="#" _blank>
+                  <article class="photo-gallery__item">
+                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография растения">
+                      <div class="photo-gallery__item-info">
+                          <div class="photo-gallery__caption">
+                              <h2 class="photo-gallery__photo-name">Местная растительность</h2>
+                              <p class="photo-gallery__author-name">Автор фото: Сергей</p>
+                          </div>
+                          <span class="photo-gallery__like-counter">143</span>
+                      </div>
+                  </article>
+                </a>
+                <a class="photo-gallery__link" href="#" _blank>
+                  <article class="photo-gallery__item">
+                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография горной дороги">
+                      <div class="photo-gallery__item-info">
+                          <div class="photo-gallery__caption">
+                              <h2 class="photo-gallery__photo-name">Дорога на север</h2>
+                              <p class="photo-gallery__author-name">Автор фото: Петр</p>
+                          </div>
+                          <span class="photo-gallery__like-counter">96</span>
+                      </div>
+                  </article>
+                </a>
+                <a class="photo-gallery__link" href="#" _blank>
+                  <article class="photo-gallery__item">
+                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография Моста Дьявола">
+                      <div class="photo-gallery__item-info">
+                          <div class="photo-gallery__caption">
+                              <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
+                              <p class="photo-gallery__author-name">Автор фото: Антон</p>
+                          </div>
+                          <span class="photo-gallery__like-counter">254</span>
+                      </div>
+                  </article>
+                </a>
+            </div>
+        </section>
+
+        <section class="video-presentation">
+            <div class="video-presentation__wrapper container">
+                <b class="video-presentation__intro">Все еще сомневаетесь?</b>
+                <p class="video-presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
+                <img class="video-presentation__video-file" src="#" width="280" height="177" alt="Видео-презентация о городе Седона">
             </div>
         </section>
 
     </main>
+
+    <footer class="page-footer">
+      <div class="page-footer__wrapper container">
+        <b class="page-footer__hashtag">#visitsedona</b>
+        <ul class="page-footer__list social-list">
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--vk" href="#" aria-label="Vkontacte">
+              <svg class="social-list__link-icon social-list__link-icon--vk" width="24" height="14">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--tg" href="#" aria-label="Telegram">
+              <svg class="social-list__link-icon social-list__link-icon--tg" width="21" height="17.6">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+          <li class="social-list__item">
+            <a class="social-list__link social-list__link--ytb" href="#" aria-label="Youtube">
+              <svg class="social-list__link-icon social-list__link-icon--ytb" width="20" height="14">
+                <!-- use -->
+              </svg>
+            </a>
+          </li>
+        </ul>
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
+            Разработано
+            <svg class="copyright__link-icon" width="27" height="34">
+              <!-- use -->
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
