--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,7 +35,7 @@
 
         <section class="photo-gallery">
             <div class="photo-gallery__wrapper container">
-                <h1 class="photo-gallery__page-title">Фото и видео</h1>
+                <h1 class="photo-gallery__page-title title">Фото и видео</h1>
                 <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
                 <a class="photo-gallery__link" href="#" _blank>
                   <article class="photo-gallery__item">
