--- a/source/index.html
+++ b/source/index.html
@@ -26,7 +26,7 @@
           </li>
         </ul>
         <div class="page-header__promo promo promo--index container">
-          <h1 class="promo__page-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
+          <h1 class="promo__page-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <img class="promo__slogan-image" src="#" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
@@ -36,57 +36,57 @@
 
       <section class="features">
         <div class="features__wrapper container">
-          <h2 class="features__title">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</h2>
-          <ol class="features__list">
+          <p class="features__intro description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+          <ul class="features__list">
             <li class="features__item features__item-1 features__item--another-view">
-              <h3 class="features__subtitle">Настоящий городок</h3>
+              <h2 class="features__subtitle title">Настоящий городок</h2>
               <span class="features__number">№1</span>
-              <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+              <p class="features__description description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="#" width="520" height="260" alt="Фото города Седона">
               <ul class="features__list benefits">
                 <li class="benefits__item benefits__item--icon-1">
-                  <b class="benefits__label">Жилье</b>
-                  <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  <h3 class="benefits__title title">Жилье</h3>
+                  <p class="benefits__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </li>
                 <li class="benefits__item benefits__item--icon-2">
-                  <b class="benefits__label">Еда</b>
-                  <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  <h3 class="benefits__title title">Еда</h3>
+                  <p class="benefits__description description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="benefits__item benefits__item--icon-3">
-                  <b class="benefits__label">Сувениры</b>
-                  <p class="benefits__description">Не только китайского, но и местного производства!</p>
+                  <h3 class="benefits__title title">Сувениры</h3>
+                  <p class="benefits__description description">Не только китайского, но и местного производства!</p>
                 </li>
               </ul>
             </li>
             <li class="features__item features__item-2 features__item--another-view">
-              <h3 class="features__subtitle">Там есть Мост Дьявола</h3>
+              <h2 class="features__subtitle title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
-              <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <p class="features__description description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="features__image" src="#" width="520" height="260" alt="Фото Моста Дьявола">
             </li>
             <li class="features__item features__item-3">
-              <h3 class="features__subtitle">Небольшая площадь</h3>
+              <h2 class="features__subtitle title">Небольшая площадь</h2>
               <span class="features__number">№3</span>
-              <p class="features__description">Все интересные места находятся очень близко</p>
+              <p class="features__description description">Все интересные места находятся очень близко</p>
             </li>
             <li class="features__item features__item-4">
-              <h3 class="features__subtitle">Красивая дорога</h3>
+              <h2 class="features__subtitle title">Красивая дорога</h2>
               <span class="features__number">№4</span>
-              <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="features__description description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="features__item features__item-5">
-              <h3 class="features__subtitle">Мало туристов</h3>
+              <h2 class="features__subtitle title">Мало туристов</h2>
               <span class="features__number">№5</span>
-              <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
+              <p class="features__description description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-          </ol>
+          </ul>
         </div>
       </section>
 
       <section class="service">
         <div class="service__wrapper container">
           <b class="service__intro">Заинтересовались?</b>
-          <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="service__description description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="service__find-hotel-button button" href="#">Найти гостиницу</a>
         </div>
       </section>
