Добавляет страницу с формой обратной связи, шапку, подвал и форму отзыва

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -12,10 +12,10 @@
       <nav class="page-header__main-nav main-nav main-nav--closed container">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
-          <li class="main-nav__item main-nav__item--active">
+          <li class="main-nav__item">
             <a class="main-nav__link" href="index.html">Главная</a>
           </li>
-          <li class="main-nav__item">
+          <li class="main-nav__item main-nav__item--active">
             <a class="main-nav__link">Фото и видео</a>
           </li>
           <li class="main-nav__item">
@@ -45,7 +45,9 @@
                               <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
                               <p class="photo-gallery__author-name">Автор фото: Борис</p>
                           </div>
-                          <span class="photo-gallery__like-counter">1350</span>
+                          <batton class="photo-gallery__like-button">
+                            <span class="photo-gallery__like-counter">1350</span>
+                          </batton>
                       </div>
                   </article>
                 </a>
@@ -57,7 +59,9 @@
                               <h2 class="photo-gallery__photo-name">Местная растительность</h2>
                               <p class="photo-gallery__author-name">Автор фото: Сергей</p>
                           </div>
-                          <span class="photo-gallery__like-counter">143</span>
+                          <button class="photo-gallery__like-button">
+                            <span class="photo-gallery__like-counter">143</span>
+                          </button>
                       </div>
                   </article>
                 </a>
@@ -69,7 +73,9 @@
                               <h2 class="photo-gallery__photo-name">Дорога на север</h2>
                               <p class="photo-gallery__author-name">Автор фото: Петр</p>
                           </div>
-                          <span class="photo-gallery__like-counter">96</span>
+                          <button class="photo-gallery__like-button">
+                            <span class="photo-gallery__like-counter">96</span>
+                          </button>
                       </div>
                   </article>
                 </a>
@@ -81,7 +87,9 @@
                               <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
                               <p class="photo-gallery__author-name">Автор фото: Антон</p>
                           </div>
-                          <span class="photo-gallery__like-counter">254</span>
+                          <button class="photo-gallery__like-button">
+                            <span class="photo-gallery__like-counter">254</span>
+                          </button>
                       </div>
                   </article>
                 </a>
