Добавляет модальные окна на страницу с формой обратной связи

--- a/source/form.html
+++ b/source/form.html
@@ -161,5 +161,17 @@
       </div>
     </footer>
 
+    <section class="modal modal__warning">
+      <h2 class="modal__title">Что-то пошло не так!</h2>
+      <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="modal__close-button button" type="button" aria-label="ОК"></button>
+    </section>
+
+    <section class="modal modal__information">
+      <h2 class="modal__title">Ваш отзыв отправлен!</h2>
+      <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте</p>
+      <button class="modal__close-button button" type="button" aria-label="Закрыть окно"></button>
+    </section>
+
   </body>
 </html>
