Исправляет опечатки и неточности в разметке страниц

--- a/source/index.html
+++ b/source/index.html
@@ -43,7 +43,7 @@
               <span class="features__number">№1</span>
               <p class="features__description description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="#" width="520" height="260" alt="Фото города Седона">
-              <ul class="features__list benefits">
+              <ul class="features__list-benefits benefits">
                 <li class="benefits__item benefits__item--icon-1">
                   <h3 class="benefits__title title">Жилье</h3>
                   <p class="benefits__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
