--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,62 +37,62 @@
             <div class="photo-gallery__wrapper container">
                 <h1 class="photo-gallery__page-title title">Фото и видео</h1>
                 <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
-                <a class="photo-gallery__link" href="#" _blank>
-                  <article class="photo-gallery__item">
+                <article class="photo-gallery__item">
+                    <a class="photo-gallery__link" href="#" target="_blank">
                       <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография дороги">
-                      <div class="photo-gallery__item-info">
-                          <div class="photo-gallery__caption">
-                              <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
-                              <p class="photo-gallery__author-name">Автор фото: Борис</p>
-                          </div>
-                          <batton class="photo-gallery__like-button">
-                            <span class="photo-gallery__like-counter">1350</span>
-                          </batton>
-                      </div>
-                  </article>
-                </a>
-                <a class="photo-gallery__link" href="#" _blank>
-                  <article class="photo-gallery__item">
+                    </a>
+                    <div class="photo-gallery__item-info">
+                        <div class="photo-gallery__caption">
+                            <h2 class="photo-gallery__photo-name">Неродные просторы</h2>
+                            <p class="photo-gallery__author-name">Автор фото: Борис</p>
+                        </div>
+                        <button class="photo-gallery__like-button">
+                          <span class="photo-gallery__like-counter">1350</span>
+                        </button>
+                    </div>
+                </article>
+                <article class="photo-gallery__item">
+                    <a class="photo-gallery__link" href="#" target="_blank">
                       <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография растения">
-                      <div class="photo-gallery__item-info">
-                          <div class="photo-gallery__caption">
-                              <h2 class="photo-gallery__photo-name">Местная растительность</h2>
-                              <p class="photo-gallery__author-name">Автор фото: Сергей</p>
-                          </div>
-                          <button class="photo-gallery__like-button">
-                            <span class="photo-gallery__like-counter">143</span>
-                          </button>
-                      </div>
-                  </article>
-                </a>
-                <a class="photo-gallery__link" href="#" _blank>
-                  <article class="photo-gallery__item">
+                    </a>
+                    <div class="photo-gallery__item-info">
+                        <div class="photo-gallery__caption">
+                            <h2 class="photo-gallery__photo-name">Местная растительность</h2>
+                            <p class="photo-gallery__author-name">Автор фото: Сергей</p>
+                        </div>
+                        <button class="photo-gallery__like-button">
+                          <span class="photo-gallery__like-counter">143</span>
+                        </button>
+                    </div>
+                </article>
+                <article class="photo-gallery__item">
+                    <a class="photo-gallery__link" href="#" target="_blank">
                       <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография горной дороги">
-                      <div class="photo-gallery__item-info">
-                          <div class="photo-gallery__caption">
-                              <h2 class="photo-gallery__photo-name">Дорога на север</h2>
-                              <p class="photo-gallery__author-name">Автор фото: Петр</p>
-                          </div>
-                          <button class="photo-gallery__like-button">
-                            <span class="photo-gallery__like-counter">96</span>
-                          </button>
-                      </div>
-                  </article>
-                </a>
-                <a class="photo-gallery__link" href="#" _blank>
-                  <article class="photo-gallery__item">
+                    </a>
+                    <div class="photo-gallery__item-info">
+                        <div class="photo-gallery__caption">
+                            <h2 class="photo-gallery__photo-name">Дорога на север</h2>
+                            <p class="photo-gallery__author-name">Автор фото: Петр</p>
+                        </div>
+                        <button class="photo-gallery__like-button">
+                          <span class="photo-gallery__like-counter">96</span>
+                        </button>
+                    </div>
+                </article>
+                <article class="photo-gallery__item">
+                    <a class="photo-gallery__link" href="#" target="_blank">
                       <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография Моста Дьявола">
-                      <div class="photo-gallery__item-info">
-                          <div class="photo-gallery__caption">
-                              <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
-                              <p class="photo-gallery__author-name">Автор фото: Антон</p>
-                          </div>
-                          <button class="photo-gallery__like-button">
-                            <span class="photo-gallery__like-counter">254</span>
-                          </button>
-                      </div>
-                  </article>
-                </a>
+                    </a>
+                    <div class="photo-gallery__item-info">
+                        <div class="photo-gallery__caption">
+                            <h2 class="photo-gallery__photo-name">Мост дьявола</h2>
+                            <p class="photo-gallery__author-name">Автор фото: Антон</p>
+                        </div>
+                        <button class="photo-gallery__like-button">
+                          <span class="photo-gallery__like-counter">254</span>
+                        </button>
+                    </div>
+                </article>
             </div>
         </section>
 
