--- a/source/form.html
+++ b/source/form.html
@@ -71,15 +71,15 @@
                 <legend class="form__title title">Ваше общее впечатление:</legend>
                 <ul class="form__list">
                   <li class="form__item">
-                    <input class="form__radio-field form__radio-field--checked" id="positive-response" type="radio" name="positive-response" value="positive" checked>
+                    <input class="form__radio-field form__radio-field--checked" id="positive-response" type="radio" name="opinion" value="positive" checked>
                     <label class="form__label" for="positive-response">Скорее положительное</label>
                   </li>
                   <li class="form__item">
-                    <input class="form__radio-field" id="negative-response" type="radio" name="negative-response" value="negative">
+                    <input class="form__radio-field" id="negative-response" type="radio" name="opinion" value="negative">
                     <label class="form__label" for="negative-response">Скорее отрицательное</label>
                   </li>
                   <li class="form__item">
-                    <input class="form__radio-field" id="nо-response" type="radio" name="nо-response" value="unknown">
+                    <input class="form__radio-field" id="nо-response" type="radio" name="opinion" value="unknown">
                     <label class="form__label" for="nо-response">Затрудняюсь ответить</label>
                   </li>
                 </ul>
@@ -115,8 +115,8 @@
                 </p>
               </fieldset>
 
-              <button class="form__button button" type="submit" name="send-form"></button>
-              <small class="form__footnote"><sup>*<sup> — Обязательные поля</small>
+              <button class="form__button button" type="submit" name="send-form">Отправить отзыв</button>
+              <small class="form__footnote"><sup>*</sup> — Обязательные поля</small>
 
             </div>
           </form>
@@ -164,13 +164,13 @@
     <section class="modal modal__warning">
       <h2 class="modal__title">Что-то пошло не так!</h2>
       <p class="modal__description">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
-      <button class="modal__close-button button" type="button" aria-label="ОК"></button>
+      <button class="modal__close-button button" type="button" aria-label="Закрыть окно">ОК</button>
     </section>
 
     <section class="modal modal__information">
       <h2 class="modal__title">Ваш отзыв отправлен!</h2>
       <p class="modal__description">Спасибо за ваше участие, ваш отзыв уже поступил к нам. В ближайшее время мы опубликуем его на сайте</p>
-      <button class="modal__close-button button" type="button" aria-label="Закрыть окно"></button>
+      <button class="modal__close-button button" type="button">Закрыть окно</button>
     </section>
 
   </body>
