Правит названия модификаторов элементов в разделе преимуществ на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -44,15 +44,15 @@
               <p class="features__description description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="#" width="520" height="260" alt="Фото города Седона">
               <ul class="features__list-benefits benefits">
-                <li class="benefits__item benefits__item--icon-1">
+                <li class="benefits__item benefits__item--icon-house">
                   <h3 class="benefits__title title">Жилье</h3>
                   <p class="benefits__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </li>
-                <li class="benefits__item benefits__item--icon-2">
+                <li class="benefits__item benefits__item--icon-food">
                   <h3 class="benefits__title title">Еда</h3>
                   <p class="benefits__description description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
-                <li class="benefits__item benefits__item--icon-3">
+                <li class="benefits__item benefits__item--icon-gift">
                   <h3 class="benefits__title title">Сувениры</h3>
                   <p class="benefits__description description">Не только китайского, но и местного производства!</p>
                 </li>
