--- a/2/index.html
+++ b/2/index.html
@@ -7,8 +7,8 @@
 </head>
   <body class="page__body">
     <header class="page-header page-header--index">
-      <a class="page-header__logo">
-        <img class="page-header__logo-image" src="#" width="185" height="96" alt="Логотип города Седона">
+      <a class="page-header__logo logo">
+        <img class="logo__image" src="#" width="185" height="96" alt="Логотип города Седона">
       </a>
       <nav class="page-header__main-nav main-nav main-nav--closed container">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
@@ -33,13 +33,13 @@
       </nav>
     </header>
 
-    <main class="page-main">
+    <main class="main">
 
       <section class="features">
         <div class="features__wrapper container">
           <p class="features__intro description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-          <ul class="features__list">
-            <li class="features__item features__item-1 features__item--another-view">
+          <ol class="features__list">
+            <li class="features__item features__item--another-view">
               <h2 class="features__subtitle title">Настоящий городок</h2>
               <span class="features__number">№1</span>
               <p class="features__description description">Седона не атракцион для туристов, там течет своя жизнь</p>
@@ -59,28 +59,28 @@
                 </li>
               </ul>
             </li>
-            <li class="features__item features__item-2 features__item--another-view">
+            <li class="features__item features__item--another-view">
               <h2 class="features__subtitle title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
               <p class="features__description description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="features__image" src="#" width="520" height="260" alt="Фото Моста Дьявола">
             </li>
-            <li class="features__item features__item-3">
+            <li class="features__item features__item--underline">
               <h2 class="features__subtitle title">Небольшая площадь</h2>
               <span class="features__number">№3</span>
               <p class="features__description description">Все интересные места находятся очень близко</p>
             </li>
-            <li class="features__item features__item-4">
+            <li class="features__item features__item--underline">
               <h2 class="features__subtitle title">Красивая дорога</h2>
               <span class="features__number">№4</span>
               <p class="features__description description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="features__item features__item-5">
+            <li class="features__item">
               <h2 class="features__subtitle title">Мало туристов</h2>
               <span class="features__number">№5</span>
               <p class="features__description description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-          </ul>
+          </ol>
         </div>
       </section>
 
@@ -98,33 +98,33 @@
 
     </main>
 
-    <footer class="page-footer">
-      <div class="page-footer__wrapper container">
-        <b class="page-footer__hashtag">#visitsedona</b>
-        <ul class="page-footer__list social-list">
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--vk" href="#" aria-label="Vkontacte">
-              <svg class="social-list__link-icon social-list__link-icon--vk" width="24" height="14">
+    <footer class="footer">
+      <div class="footer__wrapper container">
+        <b class="footer__hashtag">#visitsedona</b>
+        <ul class="footer__list social">
+          <li class="social__item">
+            <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
+              <svg class="social__link-icon social__link-icon--vk" width="24" height="14">
                 <!-- use -->
               </svg>
             </a>
           </li>
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--tg" href="#" aria-label="Telegram">
-              <svg class="social-list__link-icon social-list__link-icon--tg" width="21" height="17.6">
+          <li class="social__item">
+            <a class="social__link social__link--tg" href="#" aria-label="Telegram">
+              <svg class="social__link-icon social__link-icon--tg" width="21" height="17.6">
                 <!-- use -->
               </svg>
             </a>
           </li>
-          <li class="social-list__item">
-            <a class="social-list__link social-list__link--ytb" href="#" aria-label="Youtube">
-              <svg class="social-list__link-icon social-list__link-icon--ytb" width="20" height="14">
+          <li class="social__item">
+            <a class="social__link social__link--ytb" href="#" aria-label="Youtube">
+              <svg class="social__link-icon social__link-icon--ytb" width="20" height="14">
                 <!-- use -->
               </svg>
             </a>
           </li>
         </ul>
-        <div class="page-footer__copyright copyright">
+        <div class="footer__copyright copyright">
           <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" aria-label="Сайт HTML Academy">
             Разработано
             <svg class="copyright__link-icon" width="27" height="34">
