Добавляет препроцессорный файл со стилями для промо-блока на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -27,7 +27,6 @@
           </li>
         </ul>
         <div class="page-header__promo promo promo--index container">
-          <h1 class="promo__page-title title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h1>
           <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
@@ -35,6 +34,7 @@
 
     <main class="main">
 
+      <h1 class="main__page-title title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
       <section class="features">
         <div class="features__wrapper container">
           <p class="features__intro description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
