Добавляет препроцессорный файл со стилями для раздела преимуществ на главной странице

--- a/source/form.html
+++ b/source/form.html
@@ -36,7 +36,7 @@
       <section class="feedback">
         <div class="feedback__wrapper container">
           <h1 class="feedback__page-title title">Оставьте свой отзыв</h1>
-          <p class="feedback__description description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
+          <p class="feedback__description">Помогите нашим отелям стать лучше! Оставьте отзыв о них, а также о посещенных вами достопримечательностях</p>
           <form class="feedback__form form" action="https://echo.htmlacademy.ru/" method="get">
             <div class="form__wrapper">
 
