--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
       <a class="page-header__logo logo">
         <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
       </a>
-      <nav class="page-header__main-nav main-nav main-nav--closed container">
+      <nav class="page-header__main-nav main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--active main-nav__item--drop-shadow">
@@ -26,7 +26,7 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo promo--index container">
+        <div class="page-header__promo promo promo--index">
           <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
@@ -36,49 +36,49 @@
 
       <h1 class="main__page-title title">Седона — небольшой городок в Аризоне,<br>заслуживающий большего!</h1>
       <section class="features">
-        <div class="features__wrapper container">
-          <p class="features__intro description">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+        <div class="features__wrapper">
+          <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           <ol class="features__list">
-            <li class="features__item features__item--another-view">
+            <li class="features__item features__item--blue-theme features__item--pattern">
               <h2 class="features__subtitle title">Настоящий городок</h2>
               <span class="features__number">№1</span>
-              <p class="features__description description">Седона не атракцион для туристов, там течет своя жизнь</p>
-              <img class="features__image" src="#" width="520" height="260" alt="Фото города Седона">
+              <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
+              <img class="features__image" src="../img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
               <ul class="features__list-benefits benefits">
                 <li class="benefits__item benefits__item--icon-house">
                   <h3 class="benefits__title title">Жилье</h3>
-                  <p class="benefits__description description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                  <p class="benefits__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                 </li>
                 <li class="benefits__item benefits__item--icon-food">
                   <h3 class="benefits__title title">Еда</h3>
-                  <p class="benefits__description description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                  <p class="benefits__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                 </li>
                 <li class="benefits__item benefits__item--icon-gift">
                   <h3 class="benefits__title title">Сувениры</h3>
-                  <p class="benefits__description description">Не только китайского, но и местного производства!</p>
+                  <p class="benefits__description">Не только китайского, но и местного производства!</p>
                 </li>
               </ul>
             </li>
-            <li class="features__item features__item--another-view">
+            <li class="features__item features__item--blue-theme">
               <h2 class="features__subtitle title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
-              <p class="features__description description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-              <img class="features__image" src="#" width="520" height="260" alt="Фото Моста Дьявола">
+              <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
+              <img class="features__image" src="../img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
             </li>
-            <li class="features__item features__item--underline">
+            <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Небольшая площадь</h2>
               <span class="features__number">№3</span>
-              <p class="features__description description">Все интересные места находятся очень близко</p>
+              <p class="features__description">Все интересные места находятся очень близко</p>
             </li>
-            <li class="features__item features__item--underline">
+            <li class="features__item features__item--gray-theme features__item--underline">
               <h2 class="features__subtitle title">Красивая дорога</h2>
               <span class="features__number">№4</span>
-              <p class="features__description description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+              <p class="features__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="features__item">
+            <li class="features__item features__item--gray-theme">
               <h2 class="features__subtitle title">Мало туристов</h2>
               <span class="features__number">№5</span>
-              <p class="features__description description">Большинство едет в Гранд Каньон и толпится там</p>
+              <p class="features__description">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
           </ol>
         </div>
@@ -87,7 +87,7 @@
       <section class="service">
         <div class="service__wrapper container">
           <b class="service__intro">Заинтересовались?</b>
-          <p class="service__description description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="service__find-hotel-button button" href="#" target="_blank">Найти гостиницу</a>
         </div>
       </section>
