Добавляет препроцессорный файл со стилями для раздела услуги выбора гостиницы на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -86,9 +86,9 @@
 
       <section class="service">
         <div class="service__wrapper container">
-          <b class="service__intro">Заинтересовались?</b>
+          <p class="service__intro">Заинтересовались?</p>
           <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="service__find-hotel-button button" href="#" target="_blank">Найти гостиницу</a>
+          <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
         </div>
       </section>
 
