Добавляет препроцессорный файл со стилями для раздела картой на главной странице

--- a/source/index.html
+++ b/source/index.html
@@ -85,7 +85,7 @@
       </section>
 
       <section class="service">
-        <div class="service__wrapper container">
+        <div class="service__wrapper">
           <p class="service__intro">Заинтересовались?</p>
           <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
@@ -93,7 +93,7 @@
       </section>
 
       <section class="map">
-        <img class="map__image" src="#" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
+        <img class="map__image" src="./img/map-mobile.jpg" width="320" height="350" alt="Месторасположение города Седона: США, штат Аризона">
       </section>
 
     </main>
