Добавляет препроцессорный файл со стилями для футера и состояния интерактивных элементов при наведении и клике

--- a/source/index.html
+++ b/source/index.html
@@ -99,7 +99,7 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__wrapper container">
+      <div class="footer__wrapper">
         <b class="footer__hashtag">#visitsedona</b>
         <ul class="footer__list social">
           <li class="social__item">
