Вносит правки в стили и разметку: убирает лишние margin и padding, уточняет размеры и выравнивание изображений

--- a/source/index.html
+++ b/source/index.html
@@ -22,7 +22,7 @@
           <li class="main-nav__item">
             <a class="main-nav__link" href="form.html">Форма отзыва</a>
           </li>
-          <li class="main-nav__item main-nav__item--inner-shadow main-nav__item--gradient">
+          <li class="main-nav__item main-nav__item--inner-shadow">
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
@@ -86,7 +86,7 @@
 
       <section class="service">
         <div class="service__wrapper">
-          <p class="service__intro">Заинтересовались?</p>
+          <h2 class="service__title title">Заинтересовались?</h2>
           <p class="service__description">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
           <a class="service__find-hotel-link" href="#" target="_blank">Найти гостиницу</a>
         </div>
@@ -100,7 +100,7 @@
 
     <footer class="footer">
       <div class="footer__wrapper">
-        <b class="footer__hashtag">#visitsedona</b>
+        <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
