Добавляет стили и изображения для промо-блока на странице Каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
       <a class="page-header__logo logo" href="index.html">
         <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
       </a>
-      <nav class="page-header__main-nav main-nav main-nav--closed container">
+      <nav class="page-header__main-nav main-nav main-nav--closed">
         <button class="main-nav__toggle" type="button" name="main-nav-button" aria-label="Открыть меню"></button>
         <ul class="main-nav__list">
           <li class="main-nav__item main-nav__item--drop-shadow">
@@ -26,8 +26,8 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo container">
-          <img class="promo__slogan-image" src="#" width="229" height="39" alt="Sedona title">
+        <div class="page-header__promo promo promo--inner">
+          <img class="promo__slogan-image promo__slogan-image--inner" src="./img/slogan-inner.svg" width="229" height="39" alt="Sedona title">
         </div>
       </nav>
     </header>
