--- a/source/index.html
+++ b/source/index.html
@@ -6,7 +6,7 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page__body">
-    <header class="page-header page-header--index">
+    <header class="page-header">
       <a class="page-header__logo logo">
         <img class="logo__image" src="./img/logo-mobile.svg" width="185" height="96" alt="Логотип города Седона">
       </a>
@@ -26,7 +26,7 @@
             <a class="main-nav__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
           </li>
         </ul>
-        <div class="page-header__promo promo promo--index">
+        <div class="page-header__promo promo">
           <img class="promo__slogan-image" src="./img/slogan-index.svg" width="282" height="214" alt="Welcome to the Gorgeous. Sedona. Because the Grand Canyon sucks!">
         </div>
       </nav>
@@ -40,7 +40,7 @@
           <p class="features__intro">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
           <ol class="features__list">
             <li class="features__item features__item--blue-theme features__item--pattern">
-              <h2 class="features__subtitle title">Настоящий городок</h2>
+              <h2 class="features__subtitle features__subtitle--blue-theme title">Настоящий городок</h2>
               <span class="features__number">№1</span>
               <p class="features__description">Седона не атракцион для туристов, там течет своя жизнь</p>
               <img class="features__image" src="../img/photo-city.jpg" width="320" height="260" alt="Фото города Седона">
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li class="features__item features__item--blue-theme">
-              <h2 class="features__subtitle title">Там есть Мост Дьявола</h2>
+              <h2 class="features__subtitle features__subtitle--blue-theme title">Там есть Мост Дьявола</h2>
               <span class="features__number">№2</span>
               <p class="features__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
               <img class="features__image" src="../img/photo-bridge.jpg" width="320" height="260" alt="Фото Моста Дьявола">
