Добавляет стили и изображения для блока фото-галереи на странице Каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -35,12 +35,12 @@
     <main class="main">
 
         <section class="photo-gallery">
-            <div class="photo-gallery__wrapper container">
+            <div class="photo-gallery__wrapper">
                 <h1 class="photo-gallery__page-title title">Фото и видео</h1>
                 <p class="photo-gallery__description">Не можете решиться на путешествие из-за курса? Фотографии помогут вам забыть о политике и экономике.</p>
                 <article class="photo-gallery__item">
                     <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография дороги">
+                      <img class="photo-gallery__item-image" src="./img/gallery-photo-road-mobile.jpg" width="280" height="280" alt="Фотография дороги">
                     </a>
                     <div class="photo-gallery__item-info">
                         <div class="photo-gallery__caption">
@@ -48,13 +48,13 @@
                             <p class="photo-gallery__author-name">Автор фото: Борис</p>
                         </div>
                         <a class="photo-gallery__like-link" href="#">
-                          <span class="photo-gallery__like-counter">1350</span>
+                          <p class="photo-gallery__like-counter"><span>1350</span></p>
                         </a>
                     </div>
                 </article>
                 <article class="photo-gallery__item">
                     <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография растения">
+                      <img class="photo-gallery__item-image" src="./img/gallery-photo-plant-mobile.jpg" width="280" height="280" alt="Фотография растения">
                     </a>
                     <div class="photo-gallery__item-info">
                         <div class="photo-gallery__caption">
@@ -62,13 +62,13 @@
                             <p class="photo-gallery__author-name">Автор фото: Сергей</p>
                         </div>
                         <a class="photo-gallery__like-link" href="#">
-                          <span class="photo-gallery__like-counter">143</span>
+                          <p class="photo-gallery__like-counter"><span>143</span></p>
                         </a>
                     </div>
                 </article>
                 <article class="photo-gallery__item">
                     <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография горной дороги">
+                      <img class="photo-gallery__item-image" src="./img/gallery-photo-road-2-mobile.jpg" width="280" height="280" alt="Фотография горной дороги">
                     </a>
                     <div class="photo-gallery__item-info">
                         <div class="photo-gallery__caption">
@@ -76,13 +76,13 @@
                             <p class="photo-gallery__author-name">Автор фото: Петр</p>
                         </div>
                         <a class="photo-gallery__like-link" href="#">
-                          <span class="photo-gallery__like-counter">96</span>
+                          <p class="photo-gallery__like-counter"><span>96</span></p>
                         </a>
                     </div>
                 </article>
                 <article class="photo-gallery__item">
                     <a class="photo-gallery__link" href="#" target="_blank">
-                      <img class="photo-gallery__item-image" src="№" width="280" height="280" alt="Фотография Моста Дьявола">
+                      <img class="photo-gallery__item-image" src="./img/gallery-photo-bridge-mobile.jpg" width="280" height="280" alt="Фотография Моста Дьявола">
                     </a>
                     <div class="photo-gallery__item-info">
                         <div class="photo-gallery__caption">
@@ -90,7 +90,7 @@
                             <p class="photo-gallery__author-name">Автор фото: Антон</p>
                         </div>
                         <a class="photo-gallery__like-link" href="#">
-                          <span class="photo-gallery__like-counter">254</span>
+                          <p class="photo-gallery__like-counter"><span>254</span></p>
                         </a>
                     </div>
                 </article>
@@ -99,17 +99,17 @@
 
         <section class="video-presentation">
             <div class="video-presentation__wrapper container">
-                <b class="video-presentation__intro">Все еще сомневаетесь?</b>
+                <p class="video-presentation__intro"><b>Все еще сомневаетесь?</b></p>
                 <p class="video-presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
-                <img class="video-presentation__video-file" src="#" width="280" height="177" alt="Видео-презентация о городе Седона">
+                <img class="video-presentation__video-file" src="./img/video-mobile.jpg" width="280" height="177" alt="Видео-презентация о городе Седона">
             </div>
         </section>
 
     </main>
 
     <footer class="footer">
-      <div class="footer__wrapper container">
-        <b class="footer__hashtag">#visitsedona</b>
+      <div class="footer__wrapper">
+        <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
