--- a/source/form.html
+++ b/source/form.html
@@ -126,8 +126,8 @@
     </main>
 
     <footer class="footer">
-      <div class="footer__wrapper container">
-        <b class="footer__hashtag">#visitsedona</b>
+      <div class="footer__wrapper">
+        <p class="footer__hashtag"><b>#visitsedona</b></p>
         <ul class="footer__list social">
           <li class="social__item">
             <a class="social__link social__link--vk" href="#" aria-label="Vkontacte">
