Добавляет препроцессорный файл и стили для блока видео-презентации на странице Каталога

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -98,8 +98,8 @@
         </section>
 
         <section class="video-presentation">
-            <div class="video-presentation__wrapper container">
-                <p class="video-presentation__intro"><b>Все еще сомневаетесь?</b></p>
+            <div class="video-presentation__wrapper">
+                <h2 class="video-presentation__title title">Все еще сомневаетесь?</h2>
                 <p class="video-presentation__description">Смотрите видеопрезентацию и скорее за билетами, пока они не подорожали в очередной раз!</p>
                 <img class="video-presentation__video-file" src="./img/video-mobile.jpg" width="280" height="177" alt="Видео-презентация о городе Седона">
             </div>
